# ServiceProvider

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/inc/: Implement.h  Interface.h
Example/src/: Implement.cpp  Interface.cpp  main.cpp
ServiceProvider/: CMakeLists.txt
ServiceProvider/inc/: IService.h  IServiceBuilder.h  IServiceCollection.h  IServiceProvider.h
ServiceProvider/src/: IService.cpp  IServiceBuilder.cpp  IServiceCollection.cpp  IServiceProvider.cpp
ServiceProviderImpl/: CMakeLists.txt
ServiceProviderImpl/inc/: ServiceBuilder.h  ServiceCollection.h  ServiceMetatemplate.h  ServiceProvider.h
ServiceProviderImpl/src/: ServiceBuilder.cpp  ServiceCollection.cpp  ServiceProvider.cpp
